--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,18 +9,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/darker_gray" />
-    
+
     <com.example.uidemo.SlidingTabLayout
         android:id="@+id/sliding_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/darker_gray"
-		android:layout_below="@id/toolbar" />
-    
+        android:layout_below="@id/toolbar"
+        android:background="@android:color/darker_gray" />
+
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-		android:layout_below="@id/sliding_tabs" />
-    
+        android:layout_below="@id/sliding_tabs" />
+
 </RelativeLayout>
