--- a/res/layout/tab1.xml
+++ b/res/layout/tab1.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+   	<android.support.v7.widget.RecyclerView
+   	    android:id="@+id/recycler"
+   	    android:scrollbars="horizontal"
+   	    android:layout_width="match_parent"
+    	android:layout_height="match_parent" />
 
 </LinearLayout>
